[package]
name = "latexbuild"
version = "0.2.0"
authors = ["Zehua-Chen <peterchen06242000@outlook.com>"]
edition = "2018"
description = "Tool to build latex documents"
license-file = "MIT"
repository = "https://github.com/Zehua-Chen/latexbuild.git"

[[bin]]
name = "latexbuild"

[lib]
name="latexbuild"
path="src/latexbuild/lib.rs"

[dependencies]
clap = "2.33.0"
json = "0.12.0"
ansi_term = "0.12.1"
