[package]
name = "latexbuild"
version = "0.3.0"
authors = ["Zehua-Chen <peterchen06242000@outlook.com>"]
edition = "2018"
description = "Command line tool to manage includes and perform automatic rebuilds of latex projects"
readme = "README.md"
keywords = ["latex", "build"]
license = "MIT"
repository = "https://github.com/Zehua-Chen/latexbuild.git"

[[bin]]
name = "latexbuild"

[lib]
name="latexbuild"
path="src/latexbuild/lib.rs"

[dependencies]
clap = "2.33.0"
json = "0.12.4"
ansi_term = "0.12.1"
